--- a/src/main/resources/com/crew/mif/dienynas/MainLangas.fxml
+++ b/src/main/resources/com/crew/mif/dienynas/MainLangas.fxml
@@ -14,44 +14,46 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="580.0" prefWidth="773.0" style="-fx-background-color: bisque;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.crew.mif.dienynas.MainController">
    <children>
-      <VBox layoutX="27.0" layoutY="90.0" prefHeight="86.0" prefWidth="254.0" style="-fx-alignment: center_top;">
+      <VBox layoutX="27.0" layoutY="90.0" prefHeight="86.0" prefWidth="254.0" style="-fx-alignment: top_center;">
          <children>
-            <ComboBox fx:id="studentChoice" prefHeight="29.0" prefWidth="197.0" promptText="Choose student" style="-fx-background-color: peachpuff;" />
-            <TextField fx:id="studentSearch" promptText="Search student" style="-fx-background-color: peachpuff;">
+            <ComboBox fx:id="filterChoice" prefHeight="30.0" prefWidth="254.4" promptText="Search by" style="-fx-background-color: peachpuff;" />
+            <TextField fx:id="searchText" prefHeight="26.0" prefWidth="255.0" style="-fx-background-color: peachpuff; -fx-alignment: center;">
                <VBox.margin>
                   <Insets top="20.0" />
                </VBox.margin>
             </TextField>
          </children>
       </VBox>
-      <VBox layoutX="339.0" layoutY="90.0" prefHeight="86.0" prefWidth="224.0" style="-fx-alignment: top_right;">
+      <VBox layoutX="339.0" layoutY="90.0" prefHeight="86.0" prefWidth="254.4" style="-fx-alignment: top_right;">
          <children>
-            <DatePicker fx:id="chosenDate" prefHeight="26.0" prefWidth="180.0" style="-fx-background-color: peachpuff;" />
+            <DatePicker fx:id="chosenDate" prefHeight="26.0" prefWidth="254.4" style="-fx-background-color: peachpuff;" />
          </children>
       </VBox>
-      <HBox layoutX="573.0" layoutY="520.0" prefHeight="72.0" prefWidth="200.0" style="-fx-alignment: center;">
+      <HBox layoutX="574.0" layoutY="508.0" prefHeight="72.0" prefWidth="200.0" style="-fx-alignment: center;">
          <children>
-            <Button fx:id="importButton" mnemonicParsing="false" style="-fx-background-color: peachpuff;" text="Import" />
-            <Button fx:id="exportButton" mnemonicParsing="false" style="-fx-background-color: peachpuff;" text="Export">
+            <Button fx:id="importButton" mnemonicParsing="false" prefHeight="38.0" prefWidth="69.0" style="-fx-background-color: peachpuff;" text="Import" />
+            <Button fx:id="exportButton" mnemonicParsing="false" prefHeight="38.0" prefWidth="69.0" style="-fx-background-color: peachpuff;" text="Export">
                <HBox.margin>
                   <Insets left="20.0" />
                </HBox.margin>
             </Button>
          </children>
       </HBox>
-      <TableView fx:id="studentTable" layoutX="27.0" layoutY="186.0" prefHeight="332.0" prefWidth="536.0" style="-fx-background-color: peachpuff;">
+      <TableView fx:id="studentTable" editable="true" layoutX="27.0" layoutY="186.0" prefHeight="332.0" prefWidth="566.4" style="-fx-background-color: peachpuff;">
         <columns>
-          <TableColumn fx:id="studentName" prefWidth="75.0" text="Students name" />
-          <TableColumn fx:id="studentGroup" prefWidth="75.0" text="Group" />
-            <TableColumn fx:id="studentAttendance" prefWidth="75.0" text="Attendance" />
+            <TableColumn fx:id="studentID" prefWidth="100.0" text="Student ID" />
+            <TableColumn fx:id="studentClass" prefWidth="60.0" text="Class" />
+          <TableColumn fx:id="studentName" prefWidth="135.20001220703125" text="Students name" />
+          <TableColumn fx:id="studentGroup" prefWidth="93.5999755859375" text="Group" />
+            <TableColumn fx:id="studentGrade" prefWidth="75.20001220703125" text="Grade" />
+            <TableColumn fx:id="studentAttendance" prefWidth="168.79998779296875" text="Attendance" />
         </columns>
       </TableView>
-      <HBox layoutX="196.0" layoutY="520.0" prefHeight="72.0" prefWidth="200.0" style="-fx-alignment: center;">
+      <HBox layoutX="27.0" layoutY="508.0" prefHeight="72.0" prefWidth="200.0" style="-fx-alignment: center;">
          <children>
-            <Button fx:id="addButton" mnemonicParsing="false" style="-fx-background-color: peachpuff;" text="Add" />
+            <Button fx:id="addButton" mnemonicParsing="false" prefHeight="38.0" prefWidth="89.0" style="-fx-background-color: peachpuff;" text="Add group" />
          </children>
       </HBox>
       <BorderPane prefHeight="72.0" prefWidth="774.0" style="-fx-background-color: sandybrown;">
