--- a/src/main/resources/com/crew/mif/dienynas/MainLangas.fxml
+++ b/src/main/resources/com/crew/mif/dienynas/MainLangas.fxml
@@ -8,6 +8,7 @@
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -15,7 +16,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="580.0" prefWidth="773.0" style="-fx-background-color: bisque;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.crew.mif.dienynas.MainController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="580.0" prefWidth="870.0" style="-fx-background-color: bisque;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.crew.mif.dienynas.MainController">
    <children>
       <VBox layoutX="27.0" layoutY="90.0" prefHeight="86.0" prefWidth="254.0" style="-fx-alignment: top_center;">
          <children>
@@ -32,7 +33,7 @@
             <DatePicker fx:id="chosenDate" prefHeight="26.0" prefWidth="254.4" style="-fx-background-color: peachpuff;" />
          </children>
       </VBox>
-      <HBox layoutX="574.0" layoutY="508.0" prefHeight="72.0" prefWidth="200.0" style="-fx-alignment: center;">
+      <HBox layoutX="574.0" layoutY="508.0" prefHeight="72.0" prefWidth="200.0" style="-fx-alignment: center;" AnchorPane.leftAnchor="573.8" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="508.0">
          <children>
             <Button fx:id="importButton" mnemonicParsing="false" prefHeight="38.0" prefWidth="69.0" style="-fx-background-color: peachpuff;" text="Import" />
             <Button fx:id="exportButton" mnemonicParsing="false" prefHeight="38.0" prefWidth="69.0" style="-fx-background-color: peachpuff;" text="Export">
@@ -49,24 +50,24 @@
           <TableColumn fx:id="studentName" prefWidth="113.5999755859375" text="Students name" />
           <TableColumn fx:id="studentGroup" prefWidth="116.00006103515625" text="Group" />
             <TableColumn fx:id="studentGrade" prefWidth="75.20001220703125" text="Grade" />
-            <TableColumn fx:id="studentAttendance" prefWidth="99.99997558593748" text="Attendance" />
+            <TableColumn fx:id="studentAttendance" prefWidth="99.19998779296873" text="Attendance" />
         </columns>
       </TableView>
-      <HBox layoutX="27.0" layoutY="508.0" prefHeight="72.0" prefWidth="200.0" style="-fx-alignment: center;">
+      <HBox layoutX="641.0" layoutY="316.0" prefHeight="72.0" prefWidth="200.0" style="-fx-alignment: center;">
          <children>
-            <Button fx:id="addButton" mnemonicParsing="false" prefHeight="38.0" prefWidth="89.0" style="-fx-background-color: peachpuff;" text="Add group" />
+            <Button fx:id="addButton" disable="true" mnemonicParsing="false" prefHeight="38.0" prefWidth="89.0" style="-fx-background-color: peachpuff;" text="Add group" />
          </children>
       </HBox>
       <BorderPane prefHeight="72.0" prefWidth="774.0" style="-fx-background-color: sandybrown;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-1.3999999999999773" AnchorPane.topAnchor="0.0">
          <center>
-            <Label text="Tavo Dienynas" BorderPane.alignment="CENTER">
+            <Label text="Attendance and grading diary" BorderPane.alignment="CENTER">
                <font>
                   <Font name="Franklin Gothic Heavy" size="24.0" />
                </font>
             </Label>
          </center>
       </BorderPane>
-      <VBox layoutX="684.0" layoutY="395.0" prefHeight="113.0" prefWidth="90.0" style="-fx-alignment: bottom_center;">
+      <VBox layoutX="684.0" layoutY="395.0" prefHeight="113.0" prefWidth="90.0" style="-fx-alignment: bottom_center;" AnchorPane.leftAnchor="684.2" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="395.0">
          <children>
             <RadioButton fx:id="pdfChosen" disable="true" mnemonicParsing="false" prefHeight="30.0" prefWidth="87.0" style=".dot { -fx-background-color: peachpuff; }" text="PDF" toggleGroup="$ExportOptions">
                <toggleGroup>
@@ -76,5 +77,32 @@
             <RadioButton fx:id="csvChosen" mnemonicParsing="false" prefHeight="30.0" prefWidth="88.0" style=".dot { -fx-background-color: peachpuff; }" text="CSV" toggleGroup="$ExportOptions" />
          </children>
       </VBox>
+      <VBox layoutX="614.0" layoutY="90.0" prefHeight="86.0" prefWidth="254.0">
+         <children>
+            <ComboBox fx:id="studentChoice" prefHeight="30.0" prefWidth="254.4" promptText="Select Student" style="-fx-background-color: peachpuff;" />
+            <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-alignment: center;">
+               <children>
+                  <Button fx:id="absentButton" disable="true" mnemonicParsing="false" prefHeight="38.0" prefWidth="120.0" style="-fx-background-color: peachpuff;" text="Mark as absent">
+                     <HBox.margin>
+                        <Insets right="10.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Button fx:id="presentButton" disable="true" mnemonicParsing="false" prefHeight="38.0" prefWidth="120.0" style="-fx-background-color: peachpuff;" text="Mark as present" />
+               </children>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+            </HBox>
+         </children>
+      </VBox>
+      <Button fx:id="gradeButton" disable="true" layoutX="681.0" layoutY="231.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="120.0" style="-fx-background-color: peachpuff;" text="Give grade" visible="false" />
+      <ComboBox fx:id="gradeChoice" disable="true" layoutX="666.0" layoutY="186.0" prefWidth="150.0" promptText="Give grade" style="-fx-background-color: peachpuff;" />
+      <HBox layoutX="621.0" layoutY="231.0" prefHeight="100.0" prefWidth="239.0" style="-fx-alignment: center;">
+         <children>
+            <Label text="Group name:" />
+            <TextField fx:id="groupName" promptText="Enter name" style="-fx-background-color: peachpuff;" />
+         </children>
+      </HBox>
+      <Button fx:id="refreshButton" layoutX="264.0" layoutY="528.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="69.0" style="-fx-background-color: peachpuff;" text="Refresh" />
    </children>
 </AnchorPane>
